add hero and fashion block

--- a/index.html
+++ b/index.html
@@ -7,6 +7,185 @@
     <link rel="stylesheet" href="./css/style.min.css">
 </head>
 <body>
-    
+    <section class="notice" >
+        <a class="notice__link" href="#">Subscribe to our Newsletter For Latest Collections <img src="./image/link.svg" alt=""></a>
+    </section>
+
+    <nav>
+        <div class="container">
+            <div class="nav__wrapper">
+                <ul class="nav__list" >
+                    <li>
+                       <a class="nav__list-link" href="#"> Home</a>
+                    </li>
+                    <li>
+                       <a class="nav__list-link" href="#"> Products</a>
+                    </li>
+                </ul>
+                <img src="./image/nav__logo.svg" alt="">
+                <ul class="nav__list  nav__action-list" >
+                    <li>
+                       <a class="nav__list-link  basket" href="#"> <img src="./image/basket.svg" alt=""></a>
+                    </li>
+                    <li>
+                       <a class="nav__list-link" href="#"> Contact Support</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <section class="hero" >
+        <div class="container">
+            <div class="hero__wrapper">
+                <div class="hero__content">
+                    <h2 class="hero__title" >
+                        Elevate Your Style with Klothink
+                    </h2>
+                    <p class="hero__text" >
+                        Explore a world of fashion at Klothink, where trends meet affordability. Immerse yourself in the latest styles and seize exclusive promotions.
+                    </p>
+                    <div class="hero__action" >
+                        <button class="hero__btn" >
+                         <img src="./image/shopify.svg" alt="">   Shop Now
+                        </button>
+                        <button class="hero__btn">
+                            Contact Us
+                        </button>
+                    </div>
+                    <div class="hero__static" >
+                        <div class="static" >
+                            <b class="static__title" >
+                                Over 1000+
+                            </b>
+                            <p class="static__text" >
+                                Trendsetting Styles
+                            </p>
+                        </div>
+                        <div class="static" >
+                            <b class="static__title" >
+                                99%
+                            </b>
+                            <p class="static__text" >
+                                Customer Satisfaction Rate
+                            </p>
+                        </div>
+                        <div class="static" >
+                            <b class="static__title" >
+                                24/7
+                            </b>
+                            <p class="static__text" >
+                                Shopping Convenience
+                            </p>
+                        </div>
+                        <div class="static" >
+                            <b class="static__title" >
+                                30-Day
+                            </b>
+                            <p class="static__text" >
+                                Hassle-Free Returns
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <div class="hero__img">
+                    <img src="./image/hero.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="fashion" >
+        <div class="container">
+            <div class="fashion__wrapper">
+                <div class="fashion__header" >
+                    <div>
+                        <h3 class="fashion__title" >
+                            Discover Fashion.
+                        </h3>
+                        <p class="fashion__text" >
+                            Dive into a world of fashion innovation at Klothink. Our carefully curated collections bring together the latest trends and timeless classics, ensuring you find the perfect pieces for every occasion.
+                        </p>
+                    </div>
+                    <button class="title__btn" >
+                        View All Products
+                    </button>
+                </div>
+                <div class="fashion__categories" >
+                    <p class="categories__text" > 
+                        All
+                    </p>
+                    <p class="categories__text" >
+                        Menswear
+                    </p>
+                    <p class="categories__text" >
+                        Womenswear
+                    </p>
+                </div>
+                <div class="fashion__cards" >
+                    <div class="fashion__card" >
+                        <div class="fashion__card-img" >
+                            <img src="./image/shirt.png" alt="">
+                            <a class="basket__btn" href="#"><img src="./image/basket__btn.svg" alt=""></a>
+                        </div>
+                        <div class="fashion__card-content" >
+                            <p class="fashion__card-title" >
+                                Classic Denim Jeans
+                            </p>
+                            <b class="fashion__card-price" >
+                                $49.99
+                            </b>
+                        </div>
+                    </div>
+                    <div class="fashion__card" >
+                        <div class="fashion__card-img" >
+                            <img src="./image/hoodie.png" alt="">
+                            <a class="basket__btn" href="#"><img src="./image/basket__btn.svg" alt=""></a>
+                        </div>
+                        <div class="fashion__card-content" >
+                            <p class="fashion__card-title" >
+                                Cozy Comfort Hoodie
+                            </p>
+                            <b class="fashion__card-price" >
+                                $39.99
+                            </b>
+                        </div>
+                    </div>
+                    <div class="fashion__card" >
+                        <div class="fashion__card-img" >
+                            <img src="./image/red.png" alt="">
+                            <a class="basket__btn" href="#"><img src="./image/basket__btn.svg" alt=""></a>
+                        </div>
+                        <div class="fashion__card-content" >
+                            <p class="fashion__card-title" >
+                                Classic Polo Shirt
+                            </p>
+                            <b class="fashion__card-price" >
+                                $29.99
+                            </b>
+                        </div>
+                    </div>
+                    <div class="fashion__card" >
+                        <div class="fashion__card-img" >
+                            <img src="./image/jeans.png" alt="">
+                            <a class="basket__btn" href="#"><img src="./image/basket__btn.svg" alt=""></a>
+                        </div>
+                        <div class="fashion__card-content" >
+                            <p class="fashion__card-title" >
+                                Chino Pants
+                            </p>
+                            <b class="fashion__card-price" >
+                                $44.99
+                            </b>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="experience" >
+
+    </section>
 </body>
 </html>
