add love section

--- a/index.html
+++ b/index.html
@@ -274,5 +274,73 @@
             </div>
         </div>
     </section>
+
+    <section class="love" >
+        <div class="container">
+            <div class="love__wrapper">
+                <div class="fashion__header" >
+                    <div>
+                        <h3 class="fashion__title" >
+                            Customers Love.
+                        </h3>
+                        <p class="fashion__text" >
+                            At Klothink, our customers are the heartbeat of our brand. Explore the heartfelt testimonials shared by those who have experienced the magic of Klothink fashion.
+                        </p>
+                    </div>
+                    <button class="title__btn" >
+                        View All Testimonials
+                    </button>
+                </div>
+                <div class="love__cards" >
+                    <div class="love__card" >
+                        <div class="user__status" >
+                            <img src="./image/user-icon_1.png" alt="">
+                            <div style="display: flex;flex-direction: column; padding: 0px 85px 0px 10px;" >
+                                <b class="user__name" >
+                                    Sarah Thompson
+                                </b>
+                                <img src="./image/starts_rating.svg" alt="">
+                            </div>
+                            <img src="./image/quote.svg" alt="">
+                        </div>
+                        <p class="love__card-text" >
+                            Klothink exceeded my expectations. The gown's quality and design made me feel like a queen. Fast shipping, too!
+                        </p>
+                    </div>
+                    <div class="love__card" >
+                        <div class="user__status" >
+                            <img src="./image/user-icon_2.png" alt="">
+                            <div style="display: flex;flex-direction: column; padding: 0px 85px 0px 10px;" >
+                                <b class="user__name" >
+                                    Rajesh Patel
+                                </b>
+                                <img src="./image/starts_rating.svg" alt="">
+                            </div>
+                            <img src="./image/quote.svg" alt="">
+                        </div>
+                        <p class="love__card-text" >
+                            Absolutely love the style and warmth of the jacket. A perfect blend of fashion and functionality!   
+                        </p>
+                    </div>
+                    <div class="love__card" >
+                        <div class="user__status" >
+                            <img src="./image/user-icon_3.png" alt="">
+                            <div style="display: flex;flex-direction: column; padding: 0px 85px 0px 10px;" >
+                                <b class="user__name" >
+                                    Emily Walker
+                                </b>
+                                <img src="./image/starts_rating.svg" alt="">
+                            </div>
+                            <img src="./image/quote.svg" alt="">
+                        </div>
+                        <p class="love__card-text" >
+                            Adorable and comfortable! My daughter loves her new outfit. Thank you, Klothink, for dressing our little fashionista.   
+                        </p>
+                    </div>
+                    
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
