--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 </head>
 <body>
     <section class="notice" >
-        <a class="notice__link" href="#">Subscribe to our Newsletter For Latest Collections <img src="./image/link.svg" alt=""></a>
+       <div class="container">
+        <div class="notice__wrapper" >
+            <a class="notice__link" href="#">Subscribe to our Newsletter For Latest Collections <img src="./image/link.svg" alt=""></a>
+        </div>
+       </div>
     </section>
 
     <nav>
@@ -22,7 +26,7 @@
                        <a class="nav__list-link" href="#"> Products</a>
                     </li>
                 </ul>
-                <img src="./image/nav__logo.svg" alt="">
+                <img class="nav__logo" src="./image/nav__logo.svg" alt="">
                 <ul class="nav__list  nav__action-list" >
                     <li>
                        <a class="nav__list-link  basket" href="#"> <img src="./image/basket.svg" alt=""></a>
@@ -31,6 +35,10 @@
                        <a class="nav__list-link" href="#"> Contact Support</a>
                     </li>
                 </ul>
+                <div class="nav__action-mobile" >
+                    <a class="basket__mobile" href="#"><img src="./image/basket.svg" alt=""></a>
+                <a class="burger" href="#"><img src="./image/burger.svg" alt=""></a>
+                </div>
             </div>
         </div>
     </nav>
@@ -189,6 +197,9 @@
             <div class="experience__wrapper">
                 <div class="fashion__header" >
                     <div>
+                        <p  class="fashion__subtitle" >
+                            about us
+                        </p>
                         <h3 class="fashion__title" >
                             The Klothink Experience.
                         </h3>
@@ -295,7 +306,7 @@
                     <div class="love__card" >
                         <div class="user__status" >
                             <img src="./image/user-icon_1.png" alt="">
-                            <div style="display: flex;flex-direction: column; padding: 0px 85px 0px 10px;" >
+                            <div class="user__name-wrap" style="display: flex;flex-direction: column; padding: 0px 85px 0px 10px;" >
                                 <b class="user__name" >
                                     Sarah Thompson
                                 </b>
@@ -343,7 +354,7 @@
         </div>
     </section>
 
-    <section class="question" >
+    <!-- <section class="question" >
         <div class="container">
             <div class="question__wrapper" >
                 <div class="fashion__header" >
@@ -398,9 +409,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="seamless" >
+    <!-- <section class="seamless" >
         <div class="container" >
             <div class="seamless__wrapper" >
                 <div class="fashion__header" >
@@ -471,9 +482,9 @@
                 </div>
             </div>
         </div>   
-    </section>
+    </section> -->
 
-    <footer>
+    <!-- <footer>
         <div class="container">
             <div class="footer__wrapper">
                 <form class="footer__form" >
@@ -579,6 +590,6 @@
                 </p>
             </div>
         </div>
-    </footer>
+    </footer> -->
 </body>
 </html>
