--- a/index.html
+++ b/index.html
@@ -305,56 +305,61 @@
                 <div class="love__cards" >
                     <div class="love__card" >
                         <div class="user__status" >
-                            <img src="./image/user-icon_1.png" alt="">
-                            <div class="user__name-wrap" style="display: flex;flex-direction: column; padding: 0px 85px 0px 10px;" >
-                                <b class="user__name" >
-                                    Sarah Thompson
-                                </b>
-                                <img src="./image/starts_rating.svg" alt="">
+                            <div class="wrap" >
+                                <img src="./image/user-icon_1.png" alt="">
+                                <div class="user__static" >
+                                    <p class="user__name" >
+                                        Sarah Thompson
+                                    </p>
+                                    <img src="./image/starts_rating.svg" alt="">
+                                </div>
                             </div>
                             <img src="./image/quote.svg" alt="">
                         </div>
-                        <p class="love__card-text" >
-                            Klothink exceeded my expectations. The gown's quality and design made me feel like a queen. Fast shipping, too!
-                        </p>
+                            <p class="love__card-text" >
+                                Klothink exceeded my expectations. The gown's quality and design made me feel like a queen. Fast shipping, too!
+                            </p>
                     </div>
                     <div class="love__card" >
                         <div class="user__status" >
-                            <img src="./image/user-icon_2.png" alt="">
-                            <div style="display: flex;flex-direction: column; padding: 0px 85px 0px 10px;" >
-                                <b class="user__name" >
-                                    Rajesh Patel
-                                </b>
-                                <img src="./image/starts_rating.svg" alt="">
+                            <div class="wrap" >
+                                <img src="./image/user-icon_2.png" alt="">
+                                <div class="user__static" >
+                                    <p class="user__name" >
+                                        Rajesh Patel
+                                    </p>
+                                    <img src="./image/starts_rating.svg" alt="">
+                                </div>
                             </div>
                             <img src="./image/quote.svg" alt="">
                         </div>
-                        <p class="love__card-text" >
-                            Absolutely love the style and warmth of the jacket. A perfect blend of fashion and functionality!   
-                        </p>
+                            <p class="love__card-text" >
+                                Absolutely love the style and warmth of the jacket. A perfect blend of fashion and functionality!
+                            </p>
                     </div>
                     <div class="love__card" >
                         <div class="user__status" >
-                            <img src="./image/user-icon_3.png" alt="">
-                            <div style="display: flex;flex-direction: column; padding: 0px 85px 0px 10px;" >
-                                <b class="user__name" >
-                                    Emily Walker
-                                </b>
-                                <img src="./image/starts_rating.svg" alt="">
+                            <div class="wrap" >
+                                <img src="./image/user-icon_3.png" alt="">
+                                <div class="user__static" >
+                                    <p class="user__name" >
+                                        Emily Walker
+                                    </p>
+                                    <img src="./image/starts_rating.svg" alt="">
+                                </div>
                             </div>
                             <img src="./image/quote.svg" alt="">
                         </div>
-                        <p class="love__card-text" >
-                            Adorable and comfortable! My daughter loves her new outfit. Thank you, Klothink, for dressing our little fashionista.   
-                        </p>
+                            <p class="love__card-text" >
+                                Adorable and comfortable! My daughter loves her new outfit. Thank you, Klothink, for dressing our little fashionista.
+                            </p>
                     </div>
-                    
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- <section class="question" >
+    <section class="question" >
         <div class="container">
             <div class="question__wrapper" >
                 <div class="fashion__header" >
@@ -409,9 +414,9 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="seamless" >
+    <section class="seamless" >
         <div class="container" >
             <div class="seamless__wrapper" >
                 <div class="fashion__header" >
@@ -482,9 +487,9 @@
                 </div>
             </div>
         </div>   
-    </section> -->
+    </section>
 
-    <!-- <footer>
+    <footer>
         <div class="container">
             <div class="footer__wrapper">
                 <form class="footer__form" >
@@ -571,6 +576,17 @@
                     </ul>
                 </div>
             </div>
+            <div class="categories__mobile" >
+                <p class="text__cate" >
+                    Home
+                </p>
+                <p class="text__cate" >
+                    Products
+                </p>
+                <p class="text__cate" >
+                    Contact
+                </p>
+            </div>
             <div class="footer__end" >  
                 <div class="footer__copyright" >
                     <p class="footer__text" >
@@ -585,11 +601,11 @@
                     <a href="#"><img src="./image/twitter.svg" alt=""></a>
                     <a href="#"><img src="./image/linkedin.svg" alt=""></a>
                 </div>
-                <p class="footer__text" >
+                <p class="footer__text copyright">
                     © 2024 Klothink. All rights reserved.
                 </p>
             </div>
         </div>
-    </footer> -->
+    </footer>
 </body>
 </html>
